--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,6 +26,9 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - name: Install typescript 
       run: npm install -g typescript
+    - name: Fill missing info
+      run: bash fill.sh
+      working-directory: ${{env.working-directory}}
     - name: Compile index.ts
       run: tsc
       working-directory: ${{env.working-directory}}
